build(core): updated project deps & setups for testing