@@ -4,6 +4,7 @@ plugins {
     kotlin("plugin.jpa") version "2.2.21"
     kotlin("plugin.spring") version "2.2.21"
     kotlin("plugin.serialization") version "2.2.0"
+    id("com.bakdata.mockito") version "1.8.1"
     id("org.flywaydb.flyway") version "11.13.2"
     id("org.springframework.boot") version "4.0.2"
     id("io.spring.dependency-management") version "1.1.7"
@@ -32,6 +33,7 @@ val kotlinxCoroutinesVersion: String by project
 val dotenvSpringVersion: String by project
 val javaxAnnotationVersion: String by project
 val mockkVersion: String by project
+val mockkAgent: Configuration by configurations.creating
 
 dependencies {
     // --- Spring Boot Starters ---
@@ -72,7 +74,9 @@ dependencies {
     implementation("org.aspectj:aspectjweaver")
 
     // --- Tests ---
+    mockkAgent("net.bytebuddy:byte-buddy-agent:1.17.8")
     testImplementation("io.mockk:mockk:${mockkVersion}")
+    testImplementation("org.mockito:mockito-core")
     testImplementation("org.jetbrains.kotlin:kotlin-test")
     testImplementation("org.jetbrains.kotlin:kotlin-test-junit5")
     testImplementation("org.springframework.boot:spring-boot-starter-webmvc-test")
@@ -98,6 +102,10 @@ allOpen {
 
 tasks.withType<Test> {
     useJUnitPlatform()
+    jvmArgs("-Xshare:off", "-XX:+EnableDynamicAgentLoading")
+    testLogging {
+        events("passed", "skipped", "failed")
+    }
 }
 
 conventionalCommits {
